fix(404): fix styles of 404 page on mobile
closes #137

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -235,12 +235,31 @@ app-contact .mat-list[dense] .mat-list-item .mat-line {
 @include skillsEase(first-of-type, top);
 @include skillsEase(last-of-type, bottom);
 
+// PAGE NOT FOUND //
 app-not-found {
   .mat-card-header-text {
     width: 100%;
   }
+  .text-super {
+    font-size: 2.5em;
+    > * {
+      vertical-align: middle;
+    }
+  }
   .text-super-super {
-    font-size: 150px;
+    font-size: 8em;
   }
 }
-
+@media (max-width: 768px) {
+  app-not-found {
+    .text-super, .material-icons.md-48 {
+      font-size: 1.4em;
+    }
+    .text-super-super {
+      font-size: 4em;
+    }
+    .text-xl {
+      font-size: 12px;
+    }
+  }
+}
